<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.axoniq.axonserver</groupId>
    <artifactId>axonserver-parent</artifactId>
    <packaging>pom</packaging>
    <version>4.0.1-SNAPSHOT</version>

    <name>AxonIQ AxonServer</name>

    <modules>
        <module>axonserver-connector-api</module>
        <module>axonserver</module>
        <module>sample-applications/sample-command-processor-axonhub-client</module>
        <module>sample-applications/sample-command-processor-axonserver-client</module>
        <module>axonserver-accessdb</module>
        <module>axonserver-grpc</module>
        <module>axonserver-enterprise</module>
        <module>axonserver-migration</module>
        <module>axonserver-cli</module>
        <module>plugins/axonserver-metrics-graphite</module>
        <module>plugins/axonserver-metrics-prometheus</module>
        <module>plugins/axonserver-rabbitmq-connector</module>
        <module>plugins/axonserver-kafka-connector</module>
        <module>axonserver-cluster</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <product.name>AxonServer</product.name>

        <kotlin.version>1.1.61</kotlin.version>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
        <grpc.version>1.13.1</grpc.version>
        <netty.tcnative.version>2.0.8.Final</netty.tcnative.version>
        <axonserver.api.version>4.0</axonserver.api.version>
        <axon.version>4.0.2</axon.version>
        <projectreactor.version>3.1.7.RELEASE</projectreactor.version>
    </properties>

    <dependencyManagement>
        <dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.0.2.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
            <dependency>
                <groupId>io.axoniq</groupId>
                <artifactId>axon-server-api</artifactId>
                <version>${axonserver.api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.axonframework</groupId>
                <artifactId>axon-test</artifactId>
                <version>${axon.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>1</version>
            </dependency>

            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>${projectreactor.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.1.11</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.1.11</version>
            </dependency>
            <dependency>
                <groupId>io.axoniq.axonserver</groupId>
                <artifactId>axonserver-cluster</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <mavenExecutorId>forked-path</mavenExecutorId>
                    <localCheckout>true</localCheckout>
                    <goals>deploy</goals>
                    <pushChanges>false</pushChanges>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <arguments>-Dmaven.javadoc.skip=true -Dsource.skip=true</arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:https://github.com/AxonIQ/axoniq-axonhub-server.git</connection>
        <developerConnection>scm:git:https://github.com/AxonIQ/axoniq-axonhub-server.git</developerConnection>
        <url>https://github.com/AxonIQ/axoniq-axonhub-server</url>
        <tag>axonserver-parent-4.0</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>axoniq-nexus</id>
            <url>https://dev-nexus.axoniq.io/repository/products-snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
        <repository>
            <id>axoniq-nexus</id>
            <url>https://dev-nexus.axoniq.io/repository/products-releases</url>
            <uniqueVersion>true</uniqueVersion>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>axoniq-nexus</id>
            <url>https://dev-nexus.axoniq.io/repository/products/</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://dev-nexus.axoniq.io/repository/sonatype-snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>

    <organization>
        <name>AxonIQ BV</name>
        <url>http://axoniq.io</url>
    </organization>


    <developers>
        <developer>
            <name>Marc Gathier</name>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

</project>